Fixing SVG map and realigning the hover states on Frontier home

--- a/wp-content/themes/abt-core-custom/css/scss/pages/_frontier-home.scss
+++ b/wp-content/themes/abt-core-custom/css/scss/pages/_frontier-home.scss
@@ -72,27 +72,27 @@
     background: #0297C7;
     color: white;
     padding: 20px;
-    width: 250px;
+    max-width: 250px;
 
     &:nth-of-type(1){
-      top: 44%;
-      left: 5%;
+      top: 41%;
+      left: 7%;
     }
 
     &:nth-of-type(2){
-      top: 20%;
+      top: 12%;
       right: 20%;
     }
 
     &:nth-of-type(3){
-      bottom: 16%;
-      left: 43%;
-      width: 300px;
+      bottom: 6%;
+      left: 47%;
+      max-width: 300px;
     }
 
     &:nth-of-type(4){
-      bottom: 28%;
-      right: 5%;
+      bottom: 22%;
+      right: 4%;
     }
   }
 }
